# flask-demo

./: .flaskenv  .gitignore  MANIFEST.in  index.md  readme.md  requirements.txt  run.sh  setup.cfg
drumroll/: __init__.py
drumroll/routes/: auth.py  blog.py
drumroll/static/css/: style.css
drumroll/static/scripts/: script.js
drumroll/templates/: index.html
