[metadata]
name = drumroll
version = 1.0.0
url = https://github.com/atanughosh01/flask-demo
license = MIT License
maintainer = @atanughosh01
description = A basic drumroll app built in Flask.
long_description = file: readme.md
long_description_content_type = markdown/md

[options]
packages = find:
include_package_data = true
install_requires = Flask

# [options.extras_require]
# test = pytest

# [tool:pytest]
# testpaths = tests

# [coverage:run]
# branch = True
# source = drumroll
